fix: fixxing format and adding tags

--- a/posts/2024-11-04.markdown
+++ b/posts/2024-11-04.markdown
@@ -1,6 +1,7 @@
 ---
 title: Shallow Knowledge vs. Deep Knowledge - The Key to Standing Out in Today’s Tough Job Market
 author: Bruno Ciccarino
+tags: ["programming", "productivity", "beginners", "learning", "Shallow Knowledge", "Deep Knowledge", "career tips", "job market", "self-improvement", "technology"]
 ---
 
 Alright, let’s get real about something many of us have been thinking lately: knowledge isn’t just one thing, right? In tech (or any field, really), there’s a big difference between shallow knowledge and deep knowledge. One is quick and flashy but often short-lived, while the other is rooted, unshakeable, and usually way more valuable in the long run. And with how rough the job market’s been this year, understanding this difference could mean everything for your career.
