--- a/posts/2025-02-20.org
+++ b/posts/2025-02-20.org
@@ -24,7 +24,7 @@ tags: [ "politics", "direita", "dilma", "lula" ]
 
        É inegavel que o bolsonarista vive em uma realidade paralela entre seus comparsas, uma realidade em que eles estão sendo perseguidos, se acham sempre a vítima e que estão travando uma "batalha divina", quando na verdade são os agressores. "De acordo com a psicologia das massas, a partir da união de membros de uma multidão, uma massa pode ser formada quando um grupo considerável de pessoas apresenta uma coesão no sentido de um interesse em comum ou uma orientação afetiva semelhante. O simples fato de terem se tornado massa insere uma espécie de alma coletiva que faz com que os indivíduos sejam sugestionados, ou seja, que eles sintam, ajam e pensem de forma diferente das quais fariam isoladamente, num estado aproximado ao da fascinação num hipnotizado. " - Diogo Comitre e Ana Carolina Diniz Rosa Comitre. Essa citação diz tudo o que tem que ser dito sobre esse fenomeno.
 
-    Isso faz com que o bolsonarista preso no mundinho paralelo, perca a personalidade e tenha sua capacidade intelectual reduzida e perca algumas de suas faculdades, como a personalidade consciente, a vontade e o discernimento, passando a agir de forma inconsciente e instintiva. Freud diz que há, também, uma sensação de homogeneidade entre os indivíduos que suportam as especificidades individuais, igualam-se e não sentem repulsa uns pelos outros.
+    Isso faz com que o bolsonarista fique preso no mundinho paralelo, perca a personalidade e tenha sua capacidade intelectual reduzida e perca algumas de suas faculdades, como a personalidade consciente, a vontade e o discernimento, passando a agir de forma inconsciente e instintiva. Freud diz que há, também, uma sensação de homogeneidade entre os indivíduos que suportam as especificidades individuais, igualam-se e não sentem repulsa uns pelos outros.
 
     Como defende Freud, a massa é anônima e, portanto, irresponsável, fazendo com que desapareça por completo o sentimento de responsabilidade que retém os indivíduos. O indivíduo na massa adquire, pelo simples fato do número, um sentimento de poder invencível, permitindo-lhe ceder a seus instintos.
 
