feat: adding new paper of lem editor

--- a/posts/2025-02-24.org
+++ b/posts/2025-02-24.org
@@ -1,7 +1,7 @@
 ---
 title: Why python sucks?
 author: Bruno Ciccarino
-tags: ["software", "python", "harmful"]
+tags: ["harmful stuff"]
 ---
 
 * Abstract
